--- a/styles/influencer.css
+++ b/styles/influencer.css
@@ -1,6 +1,6 @@
 /* Shared Styles */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Manrope:wght@700&family=Poppins:wght@400;500;600;700;800&family=Roboto:wght@700&display=swap');
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -12,8 +12,13 @@
     font-weight: 600;
 }
 
-.right-arrow{
+.right-arrow {
     padding-left: 10px;
+}
+
+main {
+    width: 1110px;
+    margin: 0 auto;
 }
 
 /* Header section styles */
@@ -93,18 +98,161 @@ nav li a {
 
 /* Partner section styles */
 
-.Partner{
+.Partner {
     padding: 40px 0;
-    width: 1110px;
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
-    margin: 0 auto;
     display: flex;
     justify-content: space-evenly;
 }
 
+/* product section styles */
 
+.product {
+    width: 1050px;
+    margin: 100px auto;
+}
 
+.product-title {
+    text-align: center;
+    color: #3A3A3A;
+    font-size: 1.75rem;
+    font-weight: 600;
+    line-height: 70px;
+}
+
+.product-container {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 3fr);
+    gap: 30px;
+}
+
+.product-box {
+    padding: 15px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.product-box-name {
+    margin: 10px 0;
+    color: #18191F;
+    font-size: 1.75rem;
+    font-weight: 500;
+    line-height: 40px;
+}
+
+.product-box-price {
+    margin: 0;
+    color: var(--Dark-Color, rgba(0, 0, 0, 0.87));
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.product-box-raiting {
+    margin-top: 10px;
+    align-items: center;
+    display: flex;
+    gap: 10px;
+}
+
+.product-box-raiting-icon img {
+    margin: 0;
+}
+
+.product-box-raiting-text {
+    margin: 0;
+    color: #5E6366;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 0.1px;
+}
+
+.product-box-des {
+    color: #787885;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 143%;
+    letter-spacing: 0.252px;
+}
+
+.see-more {
+    text-align: end;
+    margin-top: 50px;
+}
+
+.see-more-btn {
+    text-align: end;
+    text-decoration: none;
+    color: rgba(224, 44, 109, 0.87);
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+/* Featured section styles */
+
+.featured {
+    margin-bottom: 100px;
+    display: flex;
+    align-items: center;
+    gap: 95px;
+}
+
+.featured-title {
+    margin: 0;
+    color: #0A0826;
+    font-family: Poppins;
+    font-size: 2.375rem;
+    font-weight: 700;
+}
+
+.featured-btn {
+    padding: 10px 25px;
+    background-color: #E02C6D;
+    border: none;
+    cursor: pointer;
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+/* Footer section styles */
+
+footer {
+    padding: 50px 0;
+    background-color: #0A0826;
+}
+
+.footer {
+    text-align: center;
+}
+
+.footer-title {
+    margin: 0;
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.footer-des {
+    color: #D9DBE1;
+    font-family: Manrope;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px
+}
+
+.footer-img a{
+    margin-left: 5px;
+    margin-right: 5px;
+}
 
 /* Responsive Media quais */
 
@@ -112,15 +260,16 @@ nav li a {
 
 @media screen and (max-width: 576px) {
 
-    header {
+    header,
+    .product {
         padding: 0 20px;
     }
 
     nav {
         flex-direction: column;
     }
-    
-    .hero{
+
+    .hero {
         gap: 20px;
         padding: 0;
         margin-top: 40px;
@@ -128,16 +277,33 @@ nav li a {
         flex-direction: column-reverse;
     }
 
-    .hero-left, .hero-right {
+    .hero-left,
+    .hero-right {
         width: 100%;
     }
 
-    .Partner{
+    .Partner {
         margin-left: 50px;
         margin-right: 50px;
         width: 100%;
         flex-wrap: wrap;
         gap: 30px;
+    }
+
+    .product {
+        width: 100%;
+    }
+
+    .product-container {
+        display: grid;
+        grid-template-columns: repeat(1, 0fr);
+        gap: 30px;
+    }
+
+    .featured {
+        width: 100%;
+        gap: 20px;
+        flex-direction: column;
     }
 
 
@@ -152,7 +318,7 @@ nav li a {
         padding: 0 40px;
     }
 
-    .hero{
+    .hero {
         gap: 20px;
         padding: 0;
         margin-top: 40px;
@@ -160,16 +326,27 @@ nav li a {
         flex-direction: column-reverse;
     }
 
-    .hero-left, .hero-right {
+    .hero-left,
+    .hero-right {
         width: 100%;
     }
-    
-    .Partner{
+
+    .Partner {
         margin-top: 40px;
         margin-left: 50px;
         margin-right: 50px;
         width: 100%;
         flex-wrap: wrap;
+        gap: 30px;
+    }
+
+    .product {
+        width: 100%;
+    }
+
+    .product-container {
+        display: grid;
+        grid-template-columns: repeat(2, 0fr);
         gap: 30px;
     }
 
